--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,48 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
 
-<head>
-
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-
-  <title>PlayLab</title>
-  <link rel="shortcut icon" href="static/img/favicon.ico" type="image/x-icon">
-
-  <!-- Bootstrap core CSS -->
-  <link href="static/vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
-
-  <!-- Custom fonts for this template -->
-  <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
-
-  <!-- Custom styles for this template -->
-  <link href="static/css/one-page-wonder.css" rel="stylesheet">
-
-  <link rel="stylesheet" type="text/css" href="static/vendor/bootstrap/css/bootstrap.css">
-<!--===============================================================================================-->
-  <link rel="stylesheet" type="text/css" href="static/fonts/font-awesome-4.7.0/css/font-awesome.css">
-<!--===============================================================================================-->
-  <link rel="stylesheet" type="text/css" href="static/fonts/iconic/css/material-design-iconic-font.css">
-<!--===============================================================================================-->
-  <link rel="stylesheet" type="text/css" href="static/vendor/animate/animate.css">
-<!--===============================================================================================-->
-  <link rel="stylesheet" type="text/css" href="static/vendor/css-hamburgers/hamburgers.css">
-<!--===============================================================================================-->
-  <link rel="stylesheet" type="text/css" href="static/vendor/animsition/css/animsition.css">
-<!--===============================================================================================-->
-  <link rel="stylesheet" type="text/css" href="static/vendor/select2/select2.css">
-<!--===============================================================================================-->
-  <link rel="stylesheet" type="text/css" href="static/vendor/daterangepicker/daterangepicker.css">
-<!--===============================================================================================-->
-  <link rel="stylesheet" type="text/css" href="static/css/util.css">
-  <link rel="stylesheet" type="text/css" href="static/css/main.css">
-
-</head>
-
-<body>
 {% block nav %}
   <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
@@ -139,7 +96,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-black">
     <div class="container">
-      <p class="m-0 text-center text-white small">Copyright &copy; Your Website 2019</p>
+      <p class="m-0 text-center text-white small">Copyright &copy; UPM 2019</p>
     </div>
     <!-- /.container -->
   </footer>
@@ -150,5 +107,3 @@
 
 </body>
 {% endblock body %}
-
-</html>
