navbars reconfigured in base, subject view working but styles

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,26 +1,19 @@
 {% extends 'base.html' %}
 
-{% block nav %}
-  <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
-      <div class="container">
-        <a class="navbar-brand" href="/">LabTon</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="#">Sign Up</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="login">Log In</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-{% endblock nav %}
+{% block nav_content%}
+  <ul class="navbar-nav ml-auto">
+    <li class="nav-item">
+      <a class="nav-link" href="#">Sign Up</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="login">Log In</a>
+    </li>
+  </ul>
+  {%  endblock nav_content %}
+
+  {% block sidebar%}
+  {% endblock sidebar%}
+
 
 {% block body %}
   <header class="masthead text-center text-white">
