--- a/app/templates/subject.html
+++ b/app/templates/subject.html
@@ -1,6 +1,8 @@
-{% extends 'home.html' %}
+{% extends 'base.html' %}
 
 <!-- No funcionan animaciones JS, ver por que -->
+
+
 {% block body%}
 
 <h1>
