--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,42 +10,43 @@
   <meta name="author" content="">
 
   <title>LabTon</title>
-  <link rel="shortcut icon" href="static/img/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="/static/img/favicon.ico" type="image/x-icon">
 
   <!-- Bootstrap core CSS -->
-  <link href="static/vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
+  <link href="/static/vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
 
   <!-- Custom fonts for this template -->
   <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="static/css/one-page-wonder.css" rel="stylesheet">
+  <link href="/static/css/one-page-wonder.css" rel="stylesheet">
 
-  <link rel="stylesheet" type="text/css" href="static/vendor/bootstrap/css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="/static/vendor/bootstrap/css/bootstrap.css">
 <!--===============================================================================================-->
-  <link rel="stylesheet" type="text/css" href="static/fonts/font-awesome-4.7.0/css/font-awesome.css">
+  <link rel="stylesheet" type="text/css" href="/static/fonts/font-awesome-4.7.0/css/font-awesome.css">
 <!--===============================================================================================-->
-  <link rel="stylesheet" type="text/css" href="static/fonts/iconic/css/material-design-iconic-font.css">
+  <link rel="stylesheet" type="text/css" href="/static/fonts/iconic/css/material-design-iconic-font.css">
 <!--===============================================================================================-->
-  <link rel="stylesheet" type="text/css" href="static/vendor/animate/animate.css">
+  <link rel="stylesheet" type="text/css" href="/static/vendor/animate/animate.css">
 <!--===============================================================================================-->
-  <link rel="stylesheet" type="text/css" href="static/vendor/css-hamburgers/hamburgers.css">
+  <link rel="stylesheet" type="text/css" href="/static/vendor/css-hamburgers/hamburgers.css">
 <!--===============================================================================================-->
-  <link rel="stylesheet" type="text/css" href="static/vendor/animsition/css/animsition.css">
+  <link rel="stylesheet" type="text/css" href="/static/vendor/animsition/css/animsition.css">
 <!--===============================================================================================-->
-  <link rel="stylesheet" type="text/css" href="static/vendor/select2/select2.css">
+  <link rel="stylesheet" type="text/css" href="/static/vendor/select2/select2.css">
 <!--===============================================================================================-->
-  <link rel="stylesheet" type="text/css" href="static/vendor/daterangepicker/daterangepicker.css">
+  <link rel="stylesheet" type="text/css" href="/static/vendor/daterangepicker/daterangepicker.css">
 <!--===============================================================================================-->
-  <link rel="stylesheet" type="text/css" href="static/css/util.css">
-  <link rel="stylesheet" type="text/css" href="static/css/main.css">
+  <link rel="stylesheet" type="text/css" href="/static/css/util.css">
+  <link rel="stylesheet" type="text/css" href="/static/css/main.css">
 
-  <link href="static/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+  <link href="/static/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
   <!-- Custom styles for admin template-->
-  <link href="static/css/sb-admin-2.css" rel="stylesheet">
+  <link href="/static/css/sb-admin-2.css" rel="stylesheet">
+
 
 </head>
 
@@ -74,7 +75,7 @@
       {% block sidebar_content%}
       <!-- Nav Item - Dashboard -->
       <li class="nav-item active">
-        <a class="nav-link" href="home">
+        <a class="nav-link" href="/home">
           <i class="fas fa-fw fa-home"></i>
           <span>Home</span></a>
       </li>
@@ -136,13 +137,13 @@
         <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Login Screens:</h6>
-            <a class="collapse-item" href="login">Login</a>
-            <a class="collapse-item" href="register.html">Register</a>
-            <a class="collapse-item" href="forgot-password.html">Forgot Password</a>
+            <a class="collapse-item" href="/login">Login</a>
+            <a class="collapse-item" href="/register.html">Register</a>
+            <a class="collapse-item" href="/forgot-password.html">Forgot Password</a>
             <div class="collapse-divider"></div>
             <h6 class="collapse-header">Other Pages:</h6>
-            <a class="collapse-item" href="404.html">404 Page</a>
-            <a class="collapse-item" href="blank.html">Blank Page</a>
+            <a class="collapse-item" href="/404.html">404 Page</a>
+            <a class="collapse-item" href="/blank.html">Blank Page</a>
           </div>
         </div>
       </li>
@@ -193,5 +194,23 @@
 {% endwith %}
 
 {% endblock body %}
+
+<!-- Bootstrap core JavaScript -->
+<script src="/static/vendor/jquery/jquery.js"></script>
+<script src="/static/vendor/bootstrap/js/bootstrap.bundle.js"></script>
+
+<!-- Core plugin JavaScript-->
+<script src="/static/vendor/jquery-easing/jquery.easing.min.js"></script>
+
+<!-- Custom scripts for all pages-->
+<script src="/static/js/sb-admin-2.min.js"></script>
+
+<!-- Page level plugins -->
+<script src="/static/vendor/chart.js/Chart.min.js"></script>
+
+<!-- Page level custom scripts -->
+<script src="/static/js/demo/chart-area-demo.js"></script>
+<script src="/static/js/demo/chart-pie-demo.js"></script>
+
 
 </html>
