--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -32,6 +32,27 @@
     </div>
   </li>
 </ul>
+
+
+<!-- Logout Modal-->
+<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+        <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
+      </div>
+      <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
+      <div class="modal-footer">
+        <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+        <a class="btn btn-primary" href="/logout">Logout</a>
+      </div>
+    </div>
+  </div>
+</div>
+
 {% endblock nav_content%}
 
 {% block body %}
@@ -67,10 +88,10 @@
           {% for element in subjects%}
             <div class="col-xl-3 col-sm-6 mb-5">
               <div class="card">
-                <a href="subject/{{element.acronym}}" class="btn btn-success" >
+                <a href="subject/{{element.id}}" class="btn btn-success" >
                     <span class="icon text-white-50">
                       <i class="pr-2 fas fa-clipboard"></i>
-                      <b class="icon text-white">{{element.acronym}}</b>
+                      <b class="icon text-white">{{element.acronym}} {{element.year}}-{{element.year+1}}</b>
                     </span>
                 </a>
               </div>
@@ -296,40 +317,5 @@
   <i class="fas fa-angle-up"></i>
 </a>
 
-<!-- Logout Modal-->
-<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-        <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">×</span>
-        </button>
-      </div>
-      <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
-      <div class="modal-footer">
-        <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-        <a class="btn btn-primary" href="logout">Logout</a>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Bootstrap core JavaScript-->
-<script src="static/vendor/jquery/jquery.min.js"></script>
-<script src="static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-<!-- Core plugin JavaScript-->
-<script src="static/vendor/jquery-easing/jquery.easing.min.js"></script>
-
-<!-- Custom scripts for all pages-->
-<script src="static/js/sb-admin-2.min.js"></script>
-
-<!-- Page level plugins -->
-<script src="static/vendor/chart.js/Chart.min.js"></script>
-
-<!-- Page level custom scripts -->
-<script src="static/js/demo/chart-area-demo.js"></script>
-<script src="static/js/demo/chart-pie-demo.js"></script>
 
 {% endblock body %}
