--- a/app/templates/subject.html
+++ b/app/templates/subject.html
@@ -1,17 +1,174 @@
 {% extends 'base.html' %}
 
-<!-- No funcionan animaciones JS, ver por que -->
+{%block nav_content%}
+<ul class="navbar-nav ml-auto">
+
+  <li class="nav-item dropdown no-arrow">
+    <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      {% if user %}
+        <span class="mr-2 d-none d-lg-inline ">{{user}}</span>
+      {% endif %}
+      <i class="fas fa-caret-down"></i>
+    </a>
+    <!-- Dropdown - User Information -->
+    <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
+      <a class="dropdown-item" href="#">
+        <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
+        Profile
+      </a>
+      <a class="dropdown-item" href="#">
+        <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
+        Settings
+      </a>
+      <a class="dropdown-item" href="#">
+        <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
+        Activity Log
+      </a>
+      <div class="dropdown-divider"></div>
+      <a class="dropdown-item" href="logout" data-toggle="modal" data-target="#logoutModal">
+        <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
+        Logout
+      </a>
+    </div>
+  </li>
+</ul>
+
+<!-- Logout Modal-->
+<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+        <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
+      </div>
+      <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
+      <div class="modal-footer">
+        <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+        <a class="btn btn-primary" href="/logout">Logout</a>
+      </div>
+    </div>
+  </div>
+</div>
+{% endblock nav_content%}
+
 
 
 {% block body%}
 
-<h1>
-  Hola, estás en <br>
-</h1>
-<h1>
-  {% for element in subject %}
-    {{element.name}}
-  {% endfor %}
-</h1>
+<!-- Content Wrapper -->
+<div id="content-wrapper" class="d-flex flex-column">
+<br>
+  <!-- Main Content -->
+  <div id="content">
+
+    <!-- Begin Page Content -->
+    <div class="container-fluid">
+      {% with messages = get_flashed_messages() %}
+        {% if messages %}
+          <ul class=flashes>
+          {% for message in messages %}
+          <div class="alert alert-danger text-center">
+            <strong>Error!</strong> {{message}}
+          </div>
+          {% endfor %}
+          </ul>
+        {% endif %}
+      {% endwith %}
+      <!-- Page Heading -->
+      <div class="d-sm-flex align-items-center justify-content-between mb-4">
+        {% for element in subject %}
+        <h1 class="h3 mb-0 text-gray-800">{{element.acronym}} {{element.year}}-{{element.year+1}}</h1>
+        {% endfor%}
+
+
+        <!-- Button trigger modal -->
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#uploadUsersCSVModal">
+          Import users from CSV
+        </button>
+        <!-- Modal -->
+        <div class="modal fade" id="uploadUsersCSVModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h4 class="modal-title" id="uploadUsersCSVTitle">Upload file</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+
+              <div class="modal-body">
+                <h6> Import your CSV file here </h6>
+
+                <div class="row">
+                  <div class="col">
+                    <form action="/uploadUsers" method="post" id="upload-form" enctype="multipart/form-data">
+                        <input type="file" name="file" id="js-upload-files" >
+                  </div>
+                  <div class="col">
+
+                  </div>
+
+                </div>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                <button type="submit" class="btn  btn-primary">Upload</button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+
+
+      <!-- Content Row -->
+
+      <div class="row">
+          <h1>
+            Hola, estás en <br>
+          </h1>
+          <h1>
+            {% for element in subject %}
+              {{element.name}}
+            {% endfor %}
+          </h1>
+      </div>
+
+      <!-- Content Row -->
+      <div class="row">
+
+      </div>
+
+    </div>
+    <!-- /.container-fluid -->
+
+  </div>
+  <!-- End of Main Content -->
+
+  <!-- Footer -->
+  <footer class="sticky-footer bg-white">
+    <div class="container my-auto">
+      <div class="copyright text-center my-auto">
+        <span>Copyright &copy; Your Website 2019</span>
+      </div>
+    </div>
+  </footer>
+  <!-- End of Footer -->
+
+</div>
+<!-- End of Content Wrapper -->
+
+</div>
+<!-- End of Page Wrapper -->
+
+<!-- Scroll to Top Button-->
+<a class="scroll-to-top rounded" href="#page-top">
+<i class="fas fa-angle-up"></i>
+</a>
+
 
 {% endblock body%}
