--- a/app/templates/subject.html
+++ b/app/templates/subject.html
@@ -82,31 +82,35 @@
         <h1 class="h3 mb-0 text-gray-800">{{element.acronym}} {{element.year}}-{{element.year+1}}</h1>
         {% endfor%}
 
-
+      <div class="col-4"
         <!-- Button trigger modal -->
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#uploadUserModal">
+          Import user
+        </button>
         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#uploadUsersCSVModal">
           Import users from CSV
         </button>
-        <!-- Modal -->
-        <div class="modal fade" id="uploadUsersCSVModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+      </div>
+        <!-- CSV Modal -->
+        <div class="modal fade" id="uploadUsersCSVModal" tabindex="-1" role="dialog" aria-hidden="true">
           <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
               <div class="modal-header">
                 <h4 class="modal-title" id="uploadUsersCSVTitle">Upload file</h4>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
+                <span aria-hidden="true">&times;</span>
                 </button>
               </div>
 
               <div class="modal-body">
                 <h6> Import your CSV file here </h6>
-
                 <div class="row">
                   <div class="col">
                     <form action="/uploadUsers" method="post" id="upload-form" enctype="multipart/form-data">
                         <input type="file" name="file" id="js-upload-files" >
-                  </div>
-                  <div class="col">
+                        {% for element in subject%}
+                        <input type="hidden" name="subject_id" value={{element.id}}>
+                        {% endfor %}
 
                   </div>
 
@@ -120,6 +124,41 @@
             </div>
           </div>
         </div>
+      <!-- User Modal -->
+
+        <div class="modal fade" id="uploadUserModal" tabindex="-1" role="dialog" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h4 class="modal-title" id="uploadUsersCSVTitle"> Insert user</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+
+              <div class="modal-body">
+                <h6> Insert the user's data</h6>
+
+                <div class="row">
+                  <div class="col">
+                    <form action="/uploadUser" method="post" id="upload-form">
+                        <input type="email" name="email" id="js-upload-files" placeholder="User email" enctype="multipart/form-data" >
+                        {% for element in subject%}
+                        <input type="hidden" name="subject_id" value={{element.id}}>
+                        {% endfor%}
+
+                  </div>
+                </div>
+              </div>
+
+              <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                      <button type="submit" class="btn  btn-primary">Upload</button>
+                    </form>
+              </div>
+            </div>
+          </div>
+        </div>
 
       </div>
 
@@ -127,16 +166,6 @@
 
       <!-- Content Row -->
 
-      <div class="row">
-          <h1>
-            Hola, estás en <br>
-          </h1>
-          <h1>
-            {% for element in subject %}
-              {{element.name}}
-            {% endfor %}
-          </h1>
-      </div>
 
       <!-- Content Row -->
       <div class="row">
