--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -7,17 +7,18 @@
 
 		<div class="container-login100" style="background-image: url('static/img/bg-01.jpg');">
 			<div class="wrap-login100 p-l-55 p-r-55 p-t-80 p-b-30">
-        {% with messages = get_flashed_messages() %}
-          {% if messages %}
-            <ul class=flashes>
-            {% for message in messages %}
-            <div class="alert alert-danger text-center">
-              <strong>Error!</strong> {{message}}
-            </div>
-            {% endfor %}
-            </ul>
-          {% endif %}
-        {% endwith %}
+				{% with messages = get_flashed_messages(with_categories=true) %}
+	        {% if messages %}
+	          <ul class=flashes>
+	          {% for category, message in messages %}
+	            <!-- <div class="alert alert-danger text-center">
+	              <strong>Error!</strong> {{message}}
+	            </div> -->
+	            <div class="alert alert-{{ category }} text-center"> {{ message}} </div>
+	          {% endfor %}
+	          </ul>
+	        {% endif %}
+	      {% endwith %}
 
 		      <form class="login100-form validate-form" action="" method="POST">
 						<span class="login100-form-title p-b-37">
