--- a/app/templates/subject.html
+++ b/app/templates/subject.html
@@ -65,13 +65,14 @@
 
     <!-- Begin Page Content -->
     <div class="container-fluid">
-      {% with messages = get_flashed_messages() %}
+      {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
           <ul class=flashes>
-          {% for message in messages %}
-          <div class="alert alert-danger text-center">
-            <strong>Error!</strong> {{message}}
-          </div>
+          {% for category, message in messages %}
+            <!-- <div class="alert alert-danger text-center">
+              <strong>Error!</strong> {{message}}
+            </div> -->
+            <div class="alert alert-{{ category }} text-center"> {{ message}} </div>
           {% endfor %}
           </ul>
         {% endif %}
