Managing users from subject added and minor changes

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -195,6 +195,18 @@
 
 {% endblock body %}
 
+{% block footer%}
+
+  <!-- Footer -->
+  <footer class="sticky-footer py-5 bg-black">
+    <div class="container my-auto">
+      <p class="m-0 text-center text-white small copyright">Copyright &copy; UPM 2019</p>
+    </div>
+    <!-- /.container -->
+  </footer>
+
+{% endblock footer%}
+
 <!-- Bootstrap core JavaScript -->
 <script src="/static/vendor/jquery/jquery.js"></script>
 <script src="/static/vendor/bootstrap/js/bootstrap.bundle.js"></script>
