--- a/app/templates/subject.html
+++ b/app/templates/subject.html
@@ -79,86 +79,27 @@
       {% endwith %}
       <!-- Page Heading -->
       <div class="d-sm-flex align-items-center justify-content-between mb-4">
-        <h1 class="h3 mb-0 text-gray-800">{{subject.acronym}} {{subject.year}}-{{subject.year+1}}</h1>
+        <h1 class="h3 mb-0 text-gray-800">{{subject.acronym}} ({{subject.year}}-{{subject.year+1}})</h1>
 
-      
+
       {% if role=='professor'%}
       <div class="col-4"
         <!-- Button trigger modal -->
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#uploadUserModal">
-          Import user
-        </button>
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#uploadUsersCSVModal">
-          Import users from CSV
-        </button>
+        <a href="/manageSubject/{{subject.id}}" class="btn btn-primary" >
+            <span class="icon">
+              Manage Users
+            </span>
+        </a>
+        <!-- <button type="button" class="btn btn-primary" href="/manageSubject/{{subject.id}}">
+          Manage users
+        </button> -->
+        <!-- <form action="/uploadUsers" method="post" id="upload-form" enctype="multipart/form-data">
+            <input type="file" name="file" id="js-upload-files" >
+            <input type="hidden" name="subject_id" value={{subject.id}}>
+
+        </form> -->
       </div>
       {% endif %}
-        <!-- CSV Modal -->
-        <div class="modal fade" id="uploadUsersCSVModal" tabindex="-1" role="dialog" aria-hidden="true">
-          <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h4 class="modal-title" id="uploadUsersCSVTitle">Upload file</h4>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
-
-              <div class="modal-body">
-                <h6> Import your CSV file here </h6>
-                <div class="row">
-                  <div class="col">
-                    <form action="/uploadUsers" method="post" id="upload-form" enctype="multipart/form-data">
-                        <input type="file" name="file" id="js-upload-files" >
-                        <input type="hidden" name="subject_id" value={{subject.id}}>
-
-                  </div>
-
-                </div>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                <button type="submit" class="btn  btn-primary">Upload</button>
-                </form>
-              </div>
-            </div>
-          </div>
-        </div>
-      <!-- User Modal -->
-
-        <div class="modal fade" id="uploadUserModal" tabindex="-1" role="dialog" aria-hidden="true">
-          <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h4 class="modal-title" id="uploadUsersCSVTitle"> Insert user</h4>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
-
-              <div class="modal-body">
-                <h6> Insert the user's data</h6>
-
-                <div class="row">
-                  <div class="col">
-                    <div class="form-group">
-                    <form action="/uploadUser" method="post" id="upload-form">
-                        <input class= "form-control" type="email" name="email" id="js-upload-files" placeholder="User email" enctype="multipart/form-data" >
-                        <input type="hidden" name="subject_id" value={{subject.id}}>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <div class="modal-footer">
-                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                      <button type="submit" class="btn  btn-primary">Upload</button>
-                    </form>
-
-              </div>
-            </div>
-          </div>
-        </div>
 
       </div>
 
