Import users from CSV implemented, delte attempt implemented but not working

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -89,7 +89,7 @@
           {% for element in subjects%}
             <div class="col-xl-3 col-sm-6 mb-5">
               <div class="card">
-                <a href="subject/{{element.id}}" class="btn btn-success" >
+                <a href="subject/{{element.id}}" class="btn btn-primary" >
                     <span class="icon text-white-50">
                       <i class="pr-2 fas fa-clipboard"></i>
                       <b class="icon text-white">{{element.acronym}} {{element.year}}-{{element.year+1}}</b>
