--- a/app/templates/manageSubject.html
+++ b/app/templates/manageSubject.html
@@ -181,8 +181,20 @@
               <tr>
                 <td class="text-center">{{user.first_name}}</td>
                 <td class="text-center">{{user.email}}</td>
-                <td class="text-center">DELETE  MODIFY
-                  <button class="btn-primary"> hola </button>
+                <td class="text-center">
+                  <div class="row">
+                      <a href="#" class="btn btn-secondary" >
+                          <span class="icon text-white-50">
+                            <b class="icon text-white">Modify</b>
+                          </span>
+                      </a>
+
+                      <form action="/deleteUserSubject" method="POST">
+                          <input type="hidden" name="user_id" value={{user.id}} >
+                          <input type="hidden" name="subject_id" value={{subject.id}}>
+                          <button type="submit" class="btn btn-secondary">Delete</button>
+                      </form>
+                  </div>
                 </td>
               </tr>
             {% endfor%}
