--- a/app/templates/manageSubject.html
+++ b/app/templates/manageSubject.html
@@ -179,10 +179,10 @@
           <tbody>
             {% for user in users_in_subject%}
               <tr>
-                <td class="text-center">{{user.first_name}}</td>
+                <td class="text-center">{{user.username}}</td>
                 <td class="text-center">{{user.email}}</td>
                 <td class="text-center">
-                  <div class="row">
+                  <div class="row text-center">
                       <a href="#" class="btn btn-secondary" >
                           <span class="icon text-white-50">
                             <b class="icon text-white">Modify</b>
