--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -79,7 +79,14 @@
         <!-- Page Heading -->
         <div class="d-sm-flex align-items-center justify-content-between mb-4">
           <h1 class="h3 mb-0 text-gray-800">Home</h1>
-
+          <div 
+            <!-- Button trigger modal -->
+            <a href="/allSubjects" class="btn btn-light" >
+                <span class="icon">
+                  See all subjects
+                </span>
+            </a>
+          </div>
 
         </div>
 
