--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -59,7 +59,7 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
+        <div class="collapse navbar-collapse col-12" id="navbarResponsive">
           {% block nav_content%}
           {% endblock nav_content %}
         </div>
