--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -77,19 +77,107 @@
           {% endif %}
         {% endwith %}
         <!-- Page Heading -->
+
         <div class="d-sm-flex align-items-center justify-content-between mb-4">
+          <div class="col-8">
           <h1 class="h3 mb-0 text-gray-800">Home</h1>
-          <div 
-            <!-- Button trigger modal -->
-            <a href="/allSubjects" class="btn btn-light" >
+          </div>
+          <div class="col">
+
+            {% for privilege in privileges%}
+              {% if privilege.name=='professor'%}
+                <!-- Button trigger modal -->
+
+                <button type="button" class="btn btn-secondary float-right" data-toggle="modal" data-target="#createSubject">
+                  Create subject
+                </button>
+
+              </div>
+
+              {% endif %}
+            {% endfor %}
+
+            <a href="/allSubjects" class="btn btn-light float-right" >
                 <span class="icon">
                   See all subjects
                 </span>
             </a>
+
           </div>
 
-        </div>
+        <!-- Subject Modal -->
+        <div class="modal fade" id="createSubject" tabindex="-1" role="dialog" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h4 class="modal-title" id="uploadUsersCSVTitle">Create a new Subject</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
 
+              <div class="modal-body">
+                <h6> Introduce data </h6>
+              <form action="/createSubject" method="post" id="upload-form" enctype="multipart/form-data">
+                <div class="row pt-2 pb-2">
+                  <div class="col">
+                      <label> Acronym </label>
+                        <input class= "form-control" name="acronym" placeholder="Acronym" >
+                  </div>
+                </div>
+                <div class="row pt-2 pb-2">
+                  <div class="col">
+                      <label> Name </label>
+                        <input class= "form-control" name="name" placeholder="Name" >
+                  </div>
+                </div>
+
+                <div class="row pt-2 pb-2">
+                  <div class="col">
+                      <label> Degree </label>
+                        <input class= "form-control" name="degree" placeholder="Degree" >
+                  </div>
+                </div>
+
+                <div class="row pt-2 pb-2">
+                  <div class="col">
+                    <label> Academic Year </label>
+                    <select class="custom-select" name="year" id="year">
+                    </select>
+
+                    <script>
+                        var currentYear = new Date().getFullYear()
+
+                        min = currentYear - 5
+                        var options = "";
+
+                        for (var year = currentYear +1 ; year >= min; year--) {
+                            nextYear=year+1
+                            options += "<option value='"+year+"' year>" + year+" - "+ nextYear + "</option>";
+                        }
+                        document.getElementById("year").innerHTML = options;
+                    </script>
+
+                  </div>
+                  </div>
+                  <div class="row pt-2 pb-2">
+                    <div class="col">
+                        <label> Description <i>(Optional)</i> </label>
+                          <input class= "form-control" name="description" placeholder="Description" >
+                    </div>
+                  </div>
+
+                </div>
+
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                <button type="submit" class="btn  btn-primary">Create</button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- end modal CSV -->
         <!-- Content Row -->
         <div class="row">
 
