--- a/app/templates/manageSubject.html
+++ b/app/templates/manageSubject.html
@@ -109,6 +109,11 @@
                 <div class="row">
                   <div class="col">
                     <form action="/uploadUsers" method="post" id="upload-form" enctype="multipart/form-data">
+                        <!-- <div class="custom-file">
+                          <label class="custom-file-label" for="customFile">Choose file</label>
+                          <input type="file" class="custom-file-input"name="file" id="js-upload-input">
+
+                        </div> -->
                         <input type="file" name="file" id="js-upload-files" >
                         <input type="hidden" name="subject_id" value={{subject.id}}>
 
