Create subject working and showing all subjects fixed in admin users. Implemented view for users management in admin mode

--- a/app/templates/users.html
+++ b/app/templates/users.html
@@ -1,4 +1,4 @@
-{% extends 'home.html' %}
+{% extends 'base.html' %}
 
 <!-- No funcionan animaciones JS, ver por que -->
 {% block body%}
@@ -14,5 +14,6 @@
     </ul>
   {% endif %}
 {% endwith %}
+<h2> Hola </h2>
 
 {% endblock body%}
