Delete Subject modal added for professors of subject, admin fixes done

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -269,7 +269,7 @@
             </div>
           </div>
         </div>
-        <!-- end modal CSV -->
+        <!-- end modal Subject -->
         <!-- Content Row -->
         <div class="row">
 
