--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,9 +2,9 @@
 
 {% block nav_content%}
   <ul class="navbar-nav ml-auto">
-    <li class="nav-item">
+    <!-- <li class="nav-item">
       <a class="nav-link" href="#">Sign Up</a>
-    </li>
+    </li> -->
     <li class="nav-item">
       <a class="nav-link" href="login">Log In</a>
     </li>
