Users managing view for admin added

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -206,7 +206,7 @@
   </footer>
 
 {% endblock footer%}
-
+</body>
 <!-- Bootstrap core JavaScript -->
 <script src="/static/vendor/jquery/jquery.js"></script>
 <script src="/static/vendor/bootstrap/js/bootstrap.bundle.js"></script>
