--- a/app/templates/users.html
+++ b/app/templates/users.html
@@ -1,19 +1,196 @@
 {% extends 'base.html' %}
 
-<!-- No funcionan animaciones JS, ver por que -->
+{%block nav_content%}
+<ul class="navbar-nav ml-auto">
+
+  <li class="nav-item dropdown no-arrow">
+    <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      {% if user %}
+        <span class="mr-2 d-none d-lg-inline ">{{user}}</span>
+      {% endif %}
+      <i class="fas fa-caret-down"></i>
+    </a>
+    <!-- Dropdown - User Information -->
+    <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
+      <a class="dropdown-item" href="#">
+        <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
+        Profile
+      </a>
+      <a class="dropdown-item" href="#">
+        <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
+        Settings
+      </a>
+      <a class="dropdown-item" href="#">
+        <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
+        Activity Log
+      </a>
+      <div class="dropdown-divider"></div>
+      <a class="dropdown-item" href="logout" data-toggle="modal" data-target="#logoutModal">
+        <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
+        Logout
+      </a>
+    </div>
+  </li>
+</ul>
+
+<!-- Logout Modal-->
+<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+        <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
+      </div>
+      <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
+      <div class="modal-footer">
+        <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+        <a class="btn btn-primary" href="/logout">Logout</a>
+      </div>
+    </div>
+  </div>
+</div>
+{% endblock nav_content%}
+
+
+
 {% block body%}
 
-{% with messages = get_flashed_messages() %}
-  {% if messages %}
-    <ul class=flashes>
-    {% for message in messages %}
-    <div class="alert alert-danger text-center">
-      <strong>Error!</strong> {{message}}
+<!-- Content Wrapper -->
+<div id="content-wrapper" class="d-flex flex-column">
+<br>
+  <!-- Main Content -->
+  <div id="content">
+
+    <!-- Begin Page Content -->
+    <div class="container-fluid">
+      {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+          <ul class=flashes>
+          {% for category, message in messages %}
+            <!-- <div class="alert alert-danger text-center">
+              <strong>Error!</strong> {{message}}
+            </div> -->
+            <div class="alert alert-{{ category }} text-center"> {{ message}} </div>
+          {% endfor %}
+          </ul>
+        {% endif %}
+      {% endwith %}
+      <!-- Page Heading -->
+      <div class="d-sm-flex align-items-center justify-content-between mb-4">
+        <div class="col-8">
+
+          <h1 class="h3 mb-0 text-gray-800">Users</h1>
+        </div>
+        <div class="col">
+
+              <button type="button" class="btn btn-primary float-right" data-toggle="modal" data-target="#createUser">
+                Create user
+              </button>
+
+        </div>
+      </div>
+
+      <!-- Subject Modal -->
+      <div class="modal fade" id="createUser" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h4 class="modal-title" id="uploadUsersCSVTitle">Create a new User</h4>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+
+            <div class="modal-body">
+              <h6> Introduce data </h6>
+            <form action="/createUser" method="post" id="upload-form" enctype="multipart/form-data">
+              <div class="row pt-2 pb-2">
+                <div class="col">
+                    <label> Email </label>
+                      <input class= "form-control" type="email" name="email" placeholder="Email" >
+                </div>
+              </div>
+
+
+              <div class="row pt-2 pb-2">
+                <div class="col">
+                  <label> Privilege </label>
+                  <select class="custom-select" name="privilege" id="privilege">
+                    {% for privilege in privileges%}
+                    <option value={{privilege.name}}>{{privilege.name}}</option>
+                    {% endfor %}
+                  </select>
+
+
+                </div>
+                </div>
+
+              </div>
+
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+              <button type="submit" class="btn  btn-primary">Create</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <table class="table table-hover">
+          <thead>
+            <tr>
+              <th scope="col" class="text-center">Name</th>
+              <th scope="col" class="text-center">Email</th>
+              <th scope="col" class="text-center">Privilege</th>
+              <th scope="col" class="text-center">Actions</th>
+
+            </tr>
+          </thead>
+          <tbody>
+            {% for user in users%}
+
+              <tr>
+                <td class="text-center">{{user[0].username}}</td>
+                <td class="text-center">{{user[0].email}}</td>
+                <td class="text-center">{{user[1].name}}</td>
+                <td class="text-center">
+                  <div class="row">
+                    <div class="col-sm">
+                      <button type="button" class="btn btn-secondary modify-user" data-toggle="modal" data-user-email="{{user[0].email}}" data-target="#modifyUserModal">
+                        Modify Role
+                      </button>
+                    </div>
+                    <div class="col-sm">
+                      <form action="/deleteUser" method="POST">
+                          <input type="hidden" name="user_id" value={{user[0].id}} >
+                          <button type="submit" class="btn btn-secondary">Delete</button>
+                      </form>
+                    </div>
+                  </div>
+                </td>
+              </tr>
+            {% endfor%}
+          </tbody>
+        </table>
+
+      </div>
+
     </div>
-    {% endfor %}
-    </ul>
-  {% endif %}
-{% endwith %}
-<h2> Hola </h2>
+    <!-- /.container-fluid -->
+
+  </div>
+  <!-- End of Main Content -->
+
+
+</div>
+<!-- End of Content Wrapper -->
+
+</div>
+<!-- End of Page Wrapper -->
+
+
 
 {% endblock body%}
