--- a/app/templates/users.html
+++ b/app/templates/users.html
@@ -150,26 +150,28 @@
             </tr>
           </thead>
           <tbody>
-            {% for user in users%}
+            {% for element in users%}
 
               <tr>
-                <td class="text-center">{{user[0].username}}</td>
-                <td class="text-center">{{user[0].email}}</td>
-                <td class="text-center">{{user[1].name}}</td>
+                <td class="text-center">{{element[0].username}}</td>
+                <td class="text-center">{{element[0].email}}</td>
+                <td class="text-center">{{element[1].name}}</td>
                 <td class="text-center">
+                  {% if not user==(element[0].email.split('@'))[0] %}
                   <div class="row">
                     <div class="col-sm">
-                      <button type="button" class="btn btn-secondary modify-user" data-toggle="modal" data-user-email="{{user[0].email}}" data-target="#modifyUserModal">
+                      <button type="button" class="btn btn-secondary float-right modify-user" data-toggle="modal" data-user-email="{{element[0].email}}" data-target="#modifyUserModal">
                         Modify Role
                       </button>
                     </div>
                     <div class="col-sm">
                       <form action="/deleteUser" method="POST">
-                          <input type="hidden" name="user_id" value={{user[0].id}} >
-                          <button type="submit" class="btn btn-secondary">Delete</button>
+                          <input type="hidden" name="user_id" value={{element[0].id}} >
+                          <button type="submit" class="btn btn-secondary float-left">Delete</button>
                       </form>
                     </div>
                   </div>
+                  {% endif %}
                 </td>
               </tr>
             {% endfor%}
